Wed May 26 14:43:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/DDS_Sender.mpc:
        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Sender/DDS_Sender.mpc:
          Resolved static compile errors.

Wed May 26 14:38:58 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ciao/ComponentServer/CIAO_ComponentServer.mpc:

          README was removed, so we can no longer install it.

Wed May 26 14:34:58 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Connector_Servant_Impl_Base.h:

          Added no-ops for get_all_publishers() and get_all_emitters()
          if CCM_LW is not defined, so for generated connector servants,
          we can skip generation of these methods.

Wed May 26 14:15:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/SimpleProcessColocation_Default.cdp:
        * DAnCE/tests/CIAO/NodeManager-Deployments/SimpleProcessColocation_Default.cdp:

         Removed the deault locality test, as we no longer support the former behavior,
         that is, if instances are not explicitly included as part of a locality group,
         they will no longer be considered as part of a seperate locality.

Wed May 26 13:38:49 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Containers/Container_Base.idl:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:

         Enabled home attribute configuration.

Wed May 26 13:25:01 UTC 2010  Marijke Hengstmengel <m.hengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello.idl