@@ -1020,63 +1020,63 @@ namespace CIAO
 
     try
       {
-	PortableServer::Servant svt;
+        PortableServer::Servant svt;
 
         try
           {
             svt = this->component_poa_->reference_to_servant (compref);
           }
-	catch (CORBA::Exception &ex)
-	  {
-	    CIAO_ERROR (1, (LM_ERROR, CLINFO
-			    "Session_Container::set_attributes - "
-			    "Caught CORBA exception while retrieving servant: %C",
-			    ex._info ().c_str ()));
-	    throw CIAO::InvalidComponent ();
-	  }
-        catch (...)
+        catch (CORBA::Exception &ex)
           {
-	    CIAO_ERROR (1, (LM_EMERGENCY, "ex in ref to servant\n"));
+            CIAO_ERROR (1, (LM_ERROR, CLINFO
+                            "Session_Container::set_attributes - "
+                            "Caught CORBA exception while retrieving servant: %C",
+                            ex._info ().c_str ()));
             throw CIAO::InvalidComponent ();
           }
-	
+        catch (...)
+          {
+            CIAO_ERROR (1, (LM_EMERGENCY, "ex in ref to servant\n"));
+            throw CIAO::InvalidComponent ();
+          }
+        
         if (!svt)
           {
-	    CIAO_ERROR (1, (LM_EMERGENCY, "invalid servant reference\n"));
+            CIAO_ERROR (1, (LM_EMERGENCY, "invalid servant reference\n"));
             throw CIAO::InvalidComponent  ();
           }
         else
           {
-	    CIAO::Connector_Servant_Impl_Base * comp (0);
-	    CIAO::Home_Servant_Impl_Base *home (0);
+            CIAO::Connector_Servant_Impl_Base * comp (0);
+            CIAO::Home_Servant_Impl_Base *home (0);
 
-	    if ((comp = dynamic_cast <CIAO::Connector_Servant_Impl_Base *> (svt)))
-	      {
-		CIAO_DEBUG (9,
-			    (LM_TRACE,
-			     CLINFO
-			     "Session_Container::set_attributes - "
-			     "Configuring attribute values on "
-			     "component object reference.\n"));
-		
-		comp->set_attributes (values);
-	      }
-	    else if ((home = dynamic_cast <CIAO::Home_Servant_Impl_Base *> (svt)))
-	      {
-		CIAO_DEBUG (9,
-			    (LM_TRACE,
-			     CLINFO
-			     "Session_Container::set_attributes - "
-			     "Configuring attribute values on "
-			     "home object reference.\n"));
-		
-		home->set_attributes (values);
-	      }
-	    else 
-	      {
-		CIAO_ERROR (1, (LM_EMERGENCY, "not home or component\n"));
-		throw CIAO::InvalidComponent ();
-	      }
+            if ((comp = dynamic_cast <CIAO::Connector_Servant_Impl_Base *> (svt)))
+              {
+                CIAO_DEBUG (9,
+                            (LM_TRACE,
+                             CLINFO
+                             "Session_Container::set_attributes - "
+                             "Configuring attribute values on "
+                             "component object reference.\n"));
+                
+                comp->set_attributes (values);
+              }
+            else if ((home = dynamic_cast <CIAO::Home_Servant_Impl_Base *> (svt)))
+              {
+                CIAO_DEBUG (9,
+                            (LM_TRACE,
+                             CLINFO
+                             "Session_Container::set_attributes - "
+                             "Configuring attribute values on "
+                             "home object reference.\n"));
+                
+                home->set_attributes (values);
+              }
+            else 
+              {
+                CIAO_ERROR (1, (LM_EMERGENCY, "not home or component\n"));
+                throw CIAO::InvalidComponent ();
+              }
           }
       }
     catch (const CIAO::InvalidComponent &)
